# goit-pythonweb-hw-01

./: README.md  main.py  pyproject.toml
src/: logger_config.py  task_one_fabric_pattern.py  task_two_solid.py
